--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VGS_Add_Card_Demo</string>
+    <string name="app_name">VGS_Cards_Demo</string>
     <string name="purchase">Purchase</string>
     <string name="valid">Form is valid</string>
     <string name="invalid">Form is invalid</string>
@@ -7,4 +7,5 @@
     <string name="dark_theme_form">Dark Theme</string>
     <string name="scan_with_card_io">Scan with card.io</string>
     <string name="proxy_url">https://tntlvnzzqsz.SANDBOX.verygoodproxy.com</string>
+    <string name="mbe_endpoint">/post</string>
 </resources>
