--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="light_theme_form">Light Theme</string>
     <string name="dark_theme_form">Dark Theme</string>
     <string name="scan_with_card_io">Scan with card.io</string>
-    <string name="proxy_url">https://<your tenant id>.SANDBOX.verygoodproxy.com</string>
+    <string name="proxy_url">https://tntlvnzzqsz.SANDBOX.verygoodproxy.com</string>
     <string name="mbe_endpoint">/post</string>
 </resources>
